[package]
name = "odins-creatures"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bevy = "0.17.3"
chrono = "0.4.42"
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["add"] }
either = "1.15.0"
futures = "0.3.31"
lazy_static = "1.5.0"
once_cell = "1.21.3"
rayon = "1.11.0"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-util = "0.7.17"
uuid = "1.18.1"
